# meridian-electronics-chatbot

./: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  render.yaml  streamlit_app.py
meridian_support/: agent.py  api.py  config.py  mcp_bridge.py
tests/: conftest.py  test_agent.py  test_mcp_bridge.py
